# WeederRobot

./: README.md
workspaceRos/src/weederbot_description/: CMakeLists.txt  README.md  package.xml
workspaceRos/src/weederbot_description/config/: config.rviz
workspaceRos/src/weederbot_description/launch/: description.launch  display.launch
workspaceRos/src/weederbot_description/urdf/: macros.urdf.xacro  weederbot.urdf.xacro
