<?xml version="1.0"?>
<package format="2">
  <name>weederbot_description</name>
  <version>1.0.0</version>
  <description>The weederbot_description package</description>

  <maintainer email="remi.rigal@ensta-bretagne.org">Rémi Rigal</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
